<resources>
    <string name="app_name">FinoBank</string>
    <string name="registration_string_register">Register</string>
    <string name="registration_string_basic_information">My account</string>
    <string name="registration_string_phone_number">Mobile phone number</string>
    <string name="registration_string_user_name">User\'s name</string>
    <string name="registration_string_signnature">E-signature</string>
    <string name="registration_button_signature_register">Register e-signature</string>
    <string name="registration_string_signature_reliability_setting">Setting reliability rate(demo version)</string>
    <string name="registration_string_signature_reliability_instruction">If reliability rate is high, the sensitivity level of verification goes up</string>
    <string name="registration_string_complicated_signature">Complicated signature</string>
    <string name="registration_string_simple_signature">Simplified signature</string>
    <string name="registration_string_additional_info">Additional information(Optional)</string>
    <string name="registration_string_emergency_number">Emergency contact number</string>
    <string name="registration_string_number_only">Number only</string>
    <string name="registration_string_email">E-mail</string>
    <string name="registration_string_credit_housed_register">Register credit card</string>
    <string name="registration_button_credit_housed_capture">Take picture of credit card</string>
    <string name="registration_string_profile_register">Register authenticate picture</string>
    <string name="registration_button_profile_capture">Take picture of ID card</string>
    <string name="registration_string_pin_code">PIN code</string>
    <string name="registration_string_inform_collect_agree">Agreement for collecting information(Required)</string>
    <string name="registration_string_context_collect_agree">Agreement for collection context data(User authentication mode)</string>
    <string name="registration_button_register">Register</string>
    <string name="registration_string_register_success">Register has been succeed</string>
    <string name="registration_string_type_all_field">Please type all required field</string>
    <string name="registration_string_write_signature_step_1">Please write signature on displayed area(1/2)</string>
    <string name="registration_string_write_signature_step_2">Please write signature on displayed area(2/2)</string>
    <string name="registration_string_write_hidden_signature">Please write hidden signature on displayed area</string>
    <string name="registration_string_write_hidden_signature_1">Please write hidden signature on displayed area(1/2)</string>
    <string name="registration_string_write_hidden_signature_2">Please write hidden signature on displayed area(2/2)</string>
    <string name="registration_string_registering_signature">Registering signature is repeated twice</string>
    <string name="registration_string_fingertip_use"> Don\'t use finger nail. Please use finger tip to sing in the marked area.</string>
    <string name="registration_string_registered_signature">Registered signature will be only used for purpose of lon-in and personal verification</string>
    <string name="registration_button_next">Next</string>
    <string name="registration_string_signature_verifying">Verifying e-signature...</string>
    <string name="registration_string_signature_registering">Registering e-signature...</string>
    <string name="registration_string_wait">Please wait</string>
    <string name="registration_string_signature_verified">E-signature has been verified</string>
    <string name="registration_string_authentication_complete">When you click confirm button,\n authentication is completed</string>
    <string name="registration_button_yes">Yes</string>
    <string name="registration_string_signature_fail">E-signature is failed(1/5)</string>
    <string name="registration_string_click_re_try_button">Please select re-try" to verify your e-signature (maximum 5 times)"</string>
    <string name="registration_button_re_try">Re-try</string>
    <string name="registration_string_fits_area_take_picture">Please fit displayed area and take a picture</string>
    <string name="registration_string_warning_backlight">The system may not recognize a ID card under the excessive light</string>
    <string name="registration_string_purpose_registered_credit">Registered credit card can be used for self-identification purpose</string>
    <string name="registration_string_collecting_data_check">Please check collected data is correct</string>
    <string name="registration_string_credit_housed_number">Credit card numbers</string>
    <string name="registration_string_credit_housed_company">Credit card company</string>
    <string name="registration_string_credit_housed_expire_date">Expire date (month/year)</string>
    <string name="registration_string_name">Name</string>
    <string name="registration_button_retake_picture">Re-take photo</string>
    <string name="registration_button_registration">Registration</string>
    <string name="registration_string_registered_signature_purpose">Registered signature can be be used for self-verification purpose</string>
    <string name="registration_string_picture_check">Please check your picture is correct</string>
    <string name="registration_string_pin_code_backgorund_color_select">Select PIN code background color</string>
    <string name="registration_string_pin_code_text_color_select">Select PIN code text color</string>
    <string name="registration_string_pin_code_type">Please type 6 digit PIN code</string>
    <string name="registration_string_pin_code_color_verify">When you try to verify PIN code, text and background color should be matched with registered color</string>
    <string name="registration_string_secure_keyboard_operating">Secured keyboard operating</string>
    <string name="main_string_talkbank">TalkBank</string>
    <string name="main_actoin_settings">Settings</string>
    <string name="main_action_seach">Seach</string>
    <string name="main_action_edit">Edit</string>
    <string name="main_button_register">Register</string>
    <string name="main_button_login">Log-in</string>
    <string name="main_button_cancel">Cancel</string>
    <string name="main_string_copyright_finotek">Copyright 2017 (c) Finotek Inc. All Rights Reserved</string>
    <string name="main_string_message_input">type a message</string>
    <string name="main_button_send">Send</string>
    <string name="main_string_open_account">Open account</string>
    <string name="main_string_transfer">Transfer</string>
    <string name="main_string_view_account_details">Check account</string>
    <string name="main_string_secured_mirocredit">Secured microcredit</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_button_send_the_conversation_to_e_mail">Send to e-mail</string>
    <string name="main_string_authentication_required">Authentication is required</string>
    <string name="main_string_authentication_succeed">Authentication is succeed</string>
    <string name="setting_string_setting">Settings</string>
    <string name="setting_string_user_information">User info.</string>
    <string name="setting_string_context_verification">Verification for context</string>
    <string name="setting_string_amount_verification">Verification for amount of money</string>
    <string name="setting_string_suspicious_transaction_verification">Verification for suspicious transaction</string>
    <string name="setting_string_langauge">Language</string>
    <string name="setting_string_basic_information">Your account</string>
    <string name="setting_string_phone_number">Mobile phone number</string>
    <string name="setting_string_user_name">User\'s name</string>
    <string name="setting_string_signature">E-signature</string>
    <string name="setting_button_signature_change">Change e-signature</string>
    <string name="setting_string_signature_reliability_setting">Setting reliability rate(demo version)</string>
    <string name="setting_string_signature_reliability_instruction">If reliability rate is high, the sensitivity level of verification goes up</string>
    <string name="setting_string_complicated_signature">Complicated signature</string>
    <string name="setting_string_simple_signature">Simplified signature</string>
    <string name="setting_string_additional_info">Additional information</string>
    <string name="setting_string_emergency_number">Emergency contact number</string>
    <string name="setting_string_email">E-mail address</string>
    <string name="setting_button_credit_housed_register">Register credit card</string>
    <string name="setting_button_credit_housed_capture">Take picture of credit card</string>
    <string name="setting_button_profile_register">Register picture for verification</string>
    <string name="setting_button_profile_capture">Take picture of credit card</string>
    <string name="setting_string_pin_code">PIN code</string>
    <string name="setting_string_pin_code_will_change">Enter PIN code to change</string>
    <string name="setting_string_pin_code_will_change_confirm">Enter PIN code to change once more</string>
    <string name="setting_button_pin_code_chanage">Change PIN code</string>
    <string name="setting_button_save">Save</string>
    <string name="setting_string_save_success">Have been saved</string>
    <string name="setting_string_type_all_field">Please type all required filed</string>
    <string name="setting_string_write_signature">Escreva assinatura na área marcada</string>
    <string name="setting_string_fingertip_use">Don\'t use finger nail. Please use finger tip to sing in the marked area.</string>
    <string name="setting_string_write_signature_step_1">Write signature on marked area (1/2)</string>
    <string name="setting_string_write_signature_step_2">Write signature on marked area(2/2)</string>
    <string name="setting_string_signature_twice"> You need to write signature twice to register your e-signature.</string>
    <string name="setting_string_registered_signature">Registered signature will be used for log-in and self verification purpose</string>
    <string name="setting_string_next">Next</string>
    <string name="setting_string_signature_verifying">Register e-signature</string>
    <string name="setting_string_wait">Please wait</string>
    <string name="setting_string_signature_verified">E-signature has been verified</string>
    <string name="setting_string_authentication_complete">Please select Yes \n"to continue to the next step"</string>
    <string name="setting_string_yes">Yes</string>
    <string name="setting_string_signature_fail">Fail to verify(1/5)</string>
    <string name="dialog_string_loan_service_user_agreement">Loan service user agreement</string>
    <string name="dialog_string_personal_credit_information_access_agreement">Personal credit information access agreement</string>
    <string name="dialog_string_loan_transaction_agreement">Loan transaction agreement</string>
    <string name="dialog_string_contact_information">Contract information and instruction</string>
    <string name="string_preview">Preview</string>
    <string name="string_save">Save</string>
    <string name="string_transfer">Transfer</string>
    <string name="string_price_unit">Price Unit</string>
    <string name="string_register_account">Register account</string>
    <string name="string_transfer_money">Transfer</string>
    <string name="string_check_account">Check account</string>
    <string name="string_balance">Balance</string>
    <string name="registration_string_credit_card_company">Credit card company</string>
    <string name="registration_string_credit_card_expire_date">Expire date (month/year)</string>
    <string name="registration_string_credit_card_number">Credit card number</string>
</resources>