<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="28dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">
    <Button
        android:id="@+id/register_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/ex_control"
        android:background="@drawable/ex_control_button"
        android:text="@string/string_register_account"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:id="@+id/transfer_money"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/ex_control"
        android:background="@drawable/ex_control_button"
        android:text="@string/string_transfer_money"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:id="@+id/check_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/ex_control"
        android:background="@drawable/ex_control_button"
        android:text="@string/string_check_account"
        style="?android:attr/borderlessButtonStyle" />
</LinearLayout>