<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <finotek.global.dev.talkbank_ca.widget.IconButton
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/ex_control"
            android:background="@drawable/ex_control_button"
            android:text="@string/string_register_account"
            android:drawableLeft="@drawable/icon_stalkbank01"
            app:iconPadding="5dp"
            style="?android:attr/borderlessButtonStyle" />
        <finotek.global.dev.talkbank_ca.widget.IconButton
            android:id="@+id/transfer_money"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/ex_control"
            android:background="@drawable/ex_control_button"
            android:text="@string/string_transfer_money"
            android:drawableLeft="@drawable/icon_stalkbank02"
            app:iconPadding="5dp"
            style="?android:attr/borderlessButtonStyle" />
        <finotek.global.dev.talkbank_ca.widget.IconButton
            android:id="@+id/check_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/ex_control"
            android:background="@drawable/ex_control_button"
            android:text="@string/string_check_account"
            android:drawableLeft="@drawable/icon_stalkbank03"
            app:iconPadding="5dp"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>
</layout>