<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="creditCard"
            type="finotek.global.dev.talkbank_ca.model.CreditCard">
        </variable>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TableRow>

                <finotek.global.dev.talkbank_ca.widget.TalkBankTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/cell_shape"
                    android:padding="4dp"
                    android:text="@string/registration_string_credit_card_number"
                    android:textAlignment="center"/>

                <finotek.global.dev.talkbank_ca.widget.TalkBankTextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:padding="4dp"
                    android:text="@{creditCard.number}"/>
            </TableRow>

            <TableRow>

                <finotek.global.dev.talkbank_ca.widget.TalkBankTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/cell_shape"
                    android:padding="4dp"
                    android:text="@string/registration_string_credit_card_company"
                    android:textAlignment="center"/>

                <finotek.global.dev.talkbank_ca.widget.TalkBankTextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:padding="4dp"
                    android:text="@{creditCard.company}"/>
            </TableRow>

            <TableRow>

                <finotek.global.dev.talkbank_ca.widget.TalkBankTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/cell_shape"
                    android:padding="4dp"
                    android:text="@string/registration_string_credit_card_expire_date"
                    android:textAlignment="center"/>

                <finotek.global.dev.talkbank_ca.widget.TalkBankTextView
                    android:id="@+id/tv_expiration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:padding="4dp"
                    android:text="@{creditCard.expirationDate.toGMTString()}"/>
            </TableRow>

            <TableRow>

                <finotek.global.dev.talkbank_ca.widget.TalkBankTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/cell_shape"
                    android:padding="4dp"
                    android:text="@string/registration_string_name"
                    android:textAlignment="center"/>

                <finotek.global.dev.talkbank_ca.widget.TalkBankTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:padding="4dp"
                    android:text="@{creditCard.name}"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</layout>
