<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:layout_marginBottom="15dp"
              android:background="#EDECED">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@android:color/white"
        android:padding="15dp">
        <TextView
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_100"
            android:textSize="14sp"
            android:text="@string/dialog_string_loan_service_user_agreement" />
        <Button
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="12sp"
            android:textColor="@color/dark_100"
            android:text="@string/string_preview"
            android:background="@drawable/btn_small_round_default"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="94dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="12sp"
            android:textColor="@color/dark_100"
            android:text="@string/string_save"
            android:background="@drawable/btn_small_round_default"
            style="?android:attr/borderlessButtonStyle" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp">
        <TextView
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_100"
            android:textSize="14sp"
            android:text="@string/dialog_string_personal_credit_information_access_agreement" />
        <Button
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="12sp"
            android:textColor="@color/dark_100"
            android:text="@string/string_preview"
            android:background="@drawable/btn_small_round_default"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="94dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="12sp"
            android:textColor="@color/dark_100"
            android:text="@string/string_save"
            android:background="@drawable/btn_small_round_default"
            style="?android:attr/borderlessButtonStyle" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp">
        <TextView
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_100"
            android:textSize="14sp"
            android:text="@string/dialog_string_loan_transaction_agreement" />
        <Button
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="12sp"
            android:textColor="@color/dark_100"
            android:text="@string/string_preview"
            android:background="@drawable/btn_small_round_default"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="94dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="12sp"
            android:textColor="@color/dark_100"
            android:text="@string/string_save"
            android:background="@drawable/btn_small_round_default"
            style="?android:attr/borderlessButtonStyle" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="15dp"
        android:layout_margin="1dp">
        <TextView
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_100"
            android:textSize="14sp"
            android:text="@string/dialog_string_contact_information" />
        <Button
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="12sp"
            android:textColor="@color/dark_100"
            android:text="@string/string_preview"
            android:background="@drawable/btn_small_round_default"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="94dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="12sp"
            android:textColor="@color/dark_100"
            android:text="@string/string_save"
            android:background="@drawable/btn_small_round_default"
            style="?android:attr/borderlessButtonStyle" />
    </RelativeLayout>
</LinearLayout>