<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="order"
            type="int" />
        <variable
            name="item"
            type="finotek.global.dev.talkbank_ca.chat.messages.Transaction" />
    </data>
    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.name}" />
        <Button
            android:layout_marginStart="45dp"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:text="@string/string_transfer"
            android:textColor="@color/dark_100"
            android:background="@drawable/btn_small_round_default" />
        <TextView
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_50"
            android:text="@{item.dateAsString}" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textSize="12sp"
                android:text="@{item.type == 0 ? @string/string_withdrawal : @string/string_deposit }"
                android:textColor="@{item.type == 0 ? @color/coral_pink : @color/dodger_blue }" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@{item.priceAsString}"
                android:textColor="@{item.type == 0 ? @color/coral_pink : @color/dodger_blue }" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textSize="12sp"
                android:text="@string/string_price_unit"
                android:textColor="@color/dark_100"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textSize="10sp"
                android:text="@string/string_balance"
                android:textColor="@color/dark_50" />
            <TextView
                android:layout_marginEnd="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@{item.balanceAsString}"
                android:textColor="@color/dark_100" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/string_price_unit"
                android:textColor="@color/dark_100"/>
        </LinearLayout>
    </RelativeLayout>
</layout>